<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_x_large"/>

        <ImageView
            android:id="@+id/imageview_menu"
            style="@style/imageview_common_style"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_overflow"/>

        <ImageView
            android:id="@+id/imageview_save"
            style="@style/imageview_common_style"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/imageview_menu"
            android:src="@drawable/ic_action_save"/>

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_arrow_back_white_24dp"/>

    </RelativeLayout>


    <com.lixinyuyin.monosyllabicdetect.view.PureToneGraph
        android:id="@+id/gridgraph"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="20dp"
        widget:grid_color="#ffaa55"
        widget:targetline_color="#55aaff"/>


    <LinearLayout
        android:id="@+id/comfirm_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_volume_min"
            style="@style/confirm_button"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/volume_min"/>

        <Button
            android:id="@+id/button_volume_medium"
            style="@style/confirm_button"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/volume_medium"/>

        <Button
            android:id="@+id/button_volume_max"
            style="@style/confirm_button"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/volume_max"
            />
    </LinearLayout>

    <include
        layout="@layout/control_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/comfirm_button_bar"
        android:layout_below="@id/gridgraph"/>

</RelativeLayout>