<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_x_large"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/username"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_toRightOf="@+id/textview_username"
        android:inputType="text"
        android:maxLength="10"/>

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_username"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_toRightOf="@+id/textview_username"
        android:inputType="textPassword"
        android:maxLength="6"/>

    <TextView
        android:id="@+id/textview_repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_password"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/re_password"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:id="@+id/edittext_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_repassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_toRightOf="@+id/textview_username"
        android:inputType="textPassword"
        android:maxLength="6"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_repassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>

</RelativeLayout>
