<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_x_large"/>

    <LinearLayout
        android:id="@+id/fre_control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_info"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_adjustfre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/adjustFre"
            android:textSize="@dimen/text_size_medium"/>

        <Button
            android:id="@+id/button_fre_minus"
            style="@style/control_button_style"
            android:layout_marginLeft="30dp"
            android:background="@drawable/frequency_minus_icon"/>

        <Button
            android:id="@+id/button_fre_add"
            style="@style/control_button_style"
            android:layout_marginLeft="60dp"
            android:background="@drawable/frequency_add_icon"/>

        <Button
            android:id="@+id/button_play"
            style="@style/control_button_large_style"
            android:layout_marginLeft="40dp"
            android:background="@drawable/ic_state_pausing"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_control_X"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fre_control_bar"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_adjustVolumeX"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="left|center_vertical"
            android:text="@string/adjustVolumeX"
            android:textSize="@dimen/text_size_medium"/>

        <com.lixinyuyin.monosyllabicdetect.view.slider.Slider
            android:id="@+id/slider_volume_X"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@color/blue"
            widget:max="9"
            widget:min="0"
            widget:showNumberIndicator="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_control_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/volume_control_X"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_adjustVolume_x"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="left|center_vertical"
            android:text="@string/adjustVolumex"
            android:textSize="@dimen/text_size_medium"/>

        <com.lixinyuyin.monosyllabicdetect.view.slider.Slider
            android:id="@+id/slider_volume_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@color/blue"
            widget:max="10"
            widget:min="1"
            widget:showNumberIndicator="true"/>

    </LinearLayout>


</RelativeLayout>